2000-07-04  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-fnmatch.input: Add tests for locale dependent
	behaviour.
	* posix/tst-fnmatch.c (main): Also set LC_CTYPE category.

	* posix/tst-fnmatch.input: Add more test cases.

	* crypt/md5-crypt.c (__md5_crypt_r): If buffers for key and salt
	are not aligned to alignof(md5_uint32) do it before calling
	__md5_process_bytes.
	* crypt/md5.c: Make sure buffers are aligned.
	* crypt/md5.h: Likewise.
	Reported by Solar Designer <solar@false.com>.

	* crypt/Makefile: Add dependencies for test programs.

	* Rules: Define LC_ALL=C in environments of all programs we run.

	* intl/tst-gettext.sh (LC_ALL): Define to C and export.

2000-07-03  H.J. Lu  <hjl@gnu.org>

	* locale/programs/ld-ctype.c (ctype_output): The size of iov
	is 2 + elem + offset, not 2 + elem + offset + 2.

2000-07-04  Ulrich Drepper  <drepper@redhat.com>

	* posix/fnmatch_loop.c: Fix two problems uncovered by the new test
	suite.
	* posix/Makefile (tests): Add tst-fnmatch.
	(tst-fnmatch-ENV): Define.
	* posix/tst-fnmatch.c: New file.
	* posix/tst-fnmatch.sh: New file.

2000-07-04  NIIBE Yutaka  <gniibe@chroot.org>

	* locale/programs/charmap.c (charmap_read): Prepend
	the condition filename == NULL.

2000-07-03  Greg McGary  <greg@mcgary.org>

	* csu/Makefile (extra-objs, install-lib): Add BP objects conditionally.
	($(objpfx)b$(start-installed-name)): Add non-elf rule.

	* libio/libio.h (_IO_FILE): Revert type of _chain to _IO_FILE*.
	* libio/libioP.h (_IO_ITER): Revert to type _IO_FILE*.
	(FILEBUF_LITERAL): Add cast for CHAIN init.
	* libio/genops.c (_IO_un_link, _IO_link_in, _IO_iter_begin): Add casts.
	(_IO_flush_all, _IO_flush_all_linebuffered, _IO_unbuffer_write):
	Revert type of `fp' to _IO_FILE*.
	(_IO_iter_file): Remove cast.
	(_IO_iter_next): Elide intermediate member reference.

	* sysdeps/powerpc/strchr.S:  Check bounds.
	Wrap extern symbols in BP_SYM ().

2000-07-03  Andreas Jaeger  <aj@suse.de>

	* dlfcn/Makefile (generated): New.
